@@ -1,5 +1,4 @@
 apport-retrace:
- - add stack rewinding to step back through crash handlers
  - add heuristics for more crash types (SEGV on read/write/exec & mem region)
 
 python-apport:
